<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="e71828@protonmail.ch">e71828</maintainer>
  <license>GPL-3.0-only</license>

  <depend>smbus2</depend>
  <depend>simple-pid</depend>
<!--  <depend>ms5837</depend>-->
<!--  <depend>pigpio</depend>-->
  <depend>python3-serial</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
